[gd_scene load_steps=10 format=3 uid="uid://dflrhh76du3qr"]

[ext_resource type="Script" path="res://scenes/ranking_players/ranking_players.gd" id="1_cdxve"]
[ext_resource type="Texture2D" uid="uid://qjv5jeq5rpot" path="res://images/ui/background2.jpg" id="1_o2bei"]
[ext_resource type="Theme" uid="uid://3mshnn7sijsm" path="res://themes/blue_button.tres" id="2_tn53o"]
[ext_resource type="Theme" uid="uid://ciqqitidtu2dc" path="res://themes/flexi_button_blue_shadow.tres" id="4_qq7od"]
[ext_resource type="Theme" uid="uid://bb14jpmq3rnmf" path="res://themes/red_button.tres" id="4_x3tq7"]
[ext_resource type="PackedScene" uid="uid://bu7xqjd8obe0a" path="res://scenes/other/buttons/blank_button.tscn" id="7_82o8v"]
[ext_resource type="Theme" uid="uid://dlc5kr68nn45h" path="res://themes/flexi_button_purple_shadow.tres" id="8_507nj"]
[ext_resource type="Theme" uid="uid://b8pd42bnktgig" path="res://themes/green_button.tres" id="8_j4l3o"]
[ext_resource type="AudioStream" uid="uid://bnpj8sjlab3hg" path="res://sounds/button_click2.mp3" id="9_mxxkr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdxve")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = -327.5
offset_right = 578.0
offset_bottom = 327.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o2bei")
expand_mode = 1

[node name="Back" parent="." instance=ExtResource("7_82o8v")]
layout_mode = 1
offset_left = -552.0
offset_top = -316.0
offset_right = -272.0
offset_bottom = -238.0
text = "Back"
_theme = ExtResource("4_x3tq7")

[node name="Question" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -316.0
offset_right = 253.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tn53o")
theme_override_font_sizes/font_size = 21
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -220.0
offset_right = 549.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(548, 306)
theme = ExtResource("4_qq7od")

[node name="Players" type="GridContainer" parent="PlayerPanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 472.0
offset_bottom = 304.0
scale = Vector2(1.3, 1.3)
theme_override_constants/h_separation = 90
theme_override_constants/v_separation = 80
columns = 5

[node name="RankingPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -480.0
offset_top = -220.0
offset_right = -200.0
offset_bottom = 292.0
theme = ExtResource("8_507nj")

[node name="ScrollContainer" type="ScrollContainer" parent="RankingPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 196.0
offset_bottom = 387.0
scale = Vector2(1.3, 1.3)

[node name="Rankings" type="VBoxContainer" parent="RankingPanel/ScrollContainer"]
layout_mode = 2

[node name="Submit" parent="." instance=ExtResource("7_82o8v")]
layout_mode = 1
offset_left = 64.0
offset_top = 228.0
offset_right = 344.0
offset_bottom = 306.0
text = "Submit"
_theme = ExtResource("8_j4l3o")

[node name="AudioStreamPlayer" parent="Submit" index="0"]
stream = ExtResource("9_mxxkr")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]

[editable path="Submit"]
